--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   flutter_svg: ^2.0.17
   carousel_slider: ^5.0.0
   flutter_tts: ^3.8.3
+  flip_card: ^0.6.0
+  sqflite: ^2.3.0
+  path: ^1.9.0
+
 
 dev_dependencies:
   flutter_test:
