--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_svg: ^2.0.17
   carousel_slider: ^5.0.0
   flutter_tts: ^3.8.3
+  mongo_dart: ^0.10.4
 
 dev_dependencies:
   flutter_test:
