--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
   carousel_slider: ^5.0.0
-  flutter_tts: ^3.8.3
+  flutter_tts: ^4.2.2   
   mongo_dart: ^0.10.4
+  permission_handler: ^12.0.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
