check tat ca page, dieu huong

--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -39,7 +39,11 @@ dependencies:
   mongo_dart: ^0.10.4
   permission_handler: ^12.0.0
   image_picker: ^1.1.2
-  flip_card: ^0.6.0
+  flip_card: ^0.7.0
+  async: ^2.12.0
+  material_color_utilities: ^0.11.1 
+  vector_math: ^2.1.4
+  vm_service: ^14.3.1
 
 dev_dependencies:
   flutter_test:
@@ -105,3 +109,6 @@ flutter:
         - asset: assets/fonts/Montserrat-Thin.ttf
   assets:
     - assets/img/
+    # - assets/img/logoEddy.png
+    # - assets/img/noti.svg
+    # - assets/img/account.svg
