--- a/app_tienganh/android/app/src/main/AndroidManifest.xml
+++ b/app_tienganh/android/app/src/main/AndroidManifest.xml
@@ -50,5 +50,6 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO"/>
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
