--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   flutter_svg: ^2.0.17
   carousel_slider: ^5.0.0
   flutter_tts: ^4.2.2   
-  mongo_dart: ^0.10.4
   permission_handler: ^12.0.0
   image_picker: ^1.1.2
   flip_card: ^0.7.0
@@ -44,6 +43,9 @@ dependencies:
   material_color_utilities: ^0.11.1 
   vector_math: ^2.1.4
   vm_service: ^14.3.1
+  firebase_core: 3.13.0
+  cloud_firestore: 5.6.7
+  
 
 dev_dependencies:
   flutter_test:
