connect dtb, built models

--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   vm_service: ^14.3.1
   firebase_core: 3.13.0
   cloud_firestore: 5.6.7
+  firebase_auth: ^5.5.3
   
 
 dev_dependencies:
