--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   firebase_core: 3.13.0
   cloud_firestore: 5.6.7
   firebase_auth: ^5.5.3
-  
+  google_sign_in: ^5.0.0
 
 dev_dependencies:
   flutter_test:
