--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -35,19 +35,19 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
   carousel_slider: ^5.0.0
-  flutter_tts: ^4.2.2   
+  flutter_tts: ^4.2.2
   permission_handler: ^12.0.0
   image_picker: ^1.1.2
   flip_card: ^0.7.0
   async: ^2.12.0
-  material_color_utilities: ^0.11.1 
+  material_color_utilities: ^0.11.1
   vector_math: ^2.1.4
   vm_service: ^14.3.1
   firebase_core: 3.13.0
   cloud_firestore: 5.6.7
   firebase_auth: ^5.5.3
   google_sign_in: ^5.0.0
-
+  firebase_storage: ^12.4.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
