--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_auth: ^5.5.3
   google_sign_in: ^5.0.0
   firebase_storage: ^12.4.5
+  http: ^1.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
