--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -47,8 +47,8 @@ dependencies:
   cloud_firestore: 5.6.7
   firebase_auth: ^5.5.3
   google_sign_in: ^5.0.0
-  firebase_storage: ^12.4.5
   http: ^1.4.0
+  uuid: ^3.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
