--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   google_sign_in: ^5.0.0
   http: ^1.4.0
   uuid: ^3.0.7
+  provider: ^6.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
