--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   http: ^1.4.0
   uuid: ^3.0.7
   provider: ^6.1.1
+  intl: ^0.18.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
