final search, edit forget pass, navigate test screen

--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -51,9 +51,12 @@ dependencies:
   uuid: ^3.0.7
   provider: ^6.1.1
   intl: ^0.18.1
+  shared_preferences: ^2.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
