--- a/app_tienganh/pubspec.yaml
+++ b/app_tienganh/pubspec.yaml
@@ -55,11 +55,10 @@ dependencies:
   qr_flutter: ^4.0.0
   webview_flutter: ^4.0.0
   convert: ^3.1.1
+  firebase_messaging: ^15.2.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
